Add JavaScript functionality for reservation validation and menu filtering; update HTML files to include script references

--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <title>Little Lemon - About</title>
     <link rel="stylesheet" href="style.css">
 </head>
+<script src="script.js"></script>
 <body>
     <header>
         <img src="images/little-lemon-grey-logo2_header.png" alt="Little Lemon Logo">
@@ -38,12 +39,12 @@
         </div>
     </main>
 
+    
     <footer>
-         <footer>
 
         <img src="images/footer_logo.png" alt="Logo">
         <div>Copyright Little Lemon</div>
-    </footer>
+    
     </footer>
 </body>
 </html>
