--- a/book.html
+++ b/book.html
@@ -5,6 +5,7 @@
     <title>Little Lemon - Book</title>
     <link rel="stylesheet" href="style.css">
 </head>
+<script src="script.js"></script>
 <body>
    <header>
         <img src="images/little-lemon-grey-logo2_header.png" alt="Little Lemon Logo">
@@ -48,7 +49,7 @@
             <label for="comments">Comments:</label>
             <textarea id="comments" rows="4"></textarea>
 
-            <button type="button" onclick="document.querySelector('form').reset(); alert('Table Booked!')">Book Table</button>       
+    <button type="button" onclick="validateReservation()">Book Table</button>       
         </form>
     </main>
 
