--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Little Lemon - Home</title>
     <link rel="stylesheet" href="style.css">
 </head>
+<script src="script.js"></script>
 <body>
     <header>
         <img src="images/little-lemon-grey-logo2_header.png" alt="Little Lemon Logo">
