--- a/menu.html
+++ b/menu.html
@@ -5,6 +5,7 @@
     <title>Little Lemon - Menu</title>
     <link rel="stylesheet" href="style.css">
 </head>
+<script src="script.js"></script>
 <body>
      <header>
         <img src="images/little-lemon-grey-logo2_header.png" alt="Little Lemon Logo">
@@ -23,6 +24,8 @@
 
     <main>
         <h1 style="text-align: center;">Our Menu</h1>
+        <input type="text" id="menuSearch" onkeyup="filterMenu()" placeholder="Search for food (e.g., Pasta, Salad)..." 
+       style="margin-bottom: 20px; padding: 10px; width: 100%; border-radius: 8px;">
 
         <div class="items">
             <div class="menu-item-card">
